# packaging_tutorial

./: pyproject.toml
src/example_package_janduplessis883.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
