[project]
name = "example_package_janduplessis883"
version = "0.0.1"
dependencies = [
    "requests",
    "yellowbrick",
]
authors = [
  { name="Jan du Plessis", email="drjanduplessis@icloud.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"